<resources>
    <string name="app_name">DevMark</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="menu">Menu</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="devmark">Devmark</string>
    <string name="personal">Personal</string>

    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>

    <string name="create_a_new_user">Create a new user</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search">SEARCH PROJECT</string>
    <string name="tags">Tags for filter </string>
    <string name="create_post">Create post</string>
    <string name="type_a_message">Type a message</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
</resources>