<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/personal">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/request"
            android:icon="@drawable/message"
            android:title="Requests" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
    </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/login"
                android:icon="@drawable/login"/>
            <item
                android:id="@+id/register"
                android:title="@string/register"
                android:icon="@drawable/register"/>
            <item
                android:id="@+id/logout"
                android:title="Log out"
                android:icon="@drawable/logout"/>
        </menu>
    </item>
</menu>