<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordConfirmation"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/rounded_button_register"/>

    </LinearLayout>

</RelativeLayout>